manifests/whoisbi-toolbox.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: toolbox
  namespace: whois-bi
spec:
  replicas: 1

  selector:
    matchLabels:
      app: toolbox

  template:
    metadata:
      labels:
        app: toolbox

    spec:
      containers:
        - name: toolbox
          image: ghcr.io/jawr/whois-bi/toolbox:latest
          command: ["sh", "-c", "tail -f /dev/null"]
