manifests/postgres.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  labels:
    app: postgres
    tier: backend

spec:
  selector:
    app: postgres
    tier: backend

  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres-deploy

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres
      tier: backend

  template:
    metadata:
      labels:
        app: postgres
        tier: backend

    spec:
      containers:
        - name: postgres
          image: postgres

          ports:
            - containerPort: 5432
              name: postgres

          # change this for something better
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/pgsql/data

          # pull down all env variables from our config map
      restartPolicy: Always

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-claim
