manifests/rabbitmq.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: whois-bi
  labels:
    app: rabbitmq
    tier: backend
spec:
  selector:
    app: rabbitmq
    tier: backend

  ports:
    - port: 5672
      targetPort: 5672
      name: amqp
---
apiVersion: v1
kind: Service

metadata:
  name: rabbitmq-manager
  namespace: whois-bi
  labels:
    app: rabbitmq-manager
    tier: backend

spec:
  type: NodePort

  ports:
    - port: 15672

  selector:
    app: rabbitmq
    tier: backend
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: rabbitmq-deploy
  namespace: whois-bi
spec:
  replicas: 1

  selector:
    matchLabels:
      app: rabbitmq
      tier: backend

  template:
    metadata:
      labels:
        app: rabbitmq
        tier: backend

    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management-alpine

          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management

          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq

      restartPolicy: Always

      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data-claim
