manifests/whoisbi-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: whois-bi
  labels:
    app: api
    tier: frontend
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: api
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  namespace: whois-bi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
      tier: frontend
  template:
    metadata:
      labels:
        app: api
        tier: frontend
    spec:
      restartPolicy: Always
      containers:
        - name: api
          image: ghcr.io/jawr/whois-bi/api:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
              name: api
---
apiVersion: v1
kind: Service
metadata:
  name: ui
  namespace: whois-bi
  labels:
    app: ui
    tier: frontend
spec:
  ports:
    - port: 80
      name: http
  selector:
    app: ui
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-deploy
  namespace: whois-bi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
      tier: frontend
  template:
    metadata:
      labels:
        app: ui
        tier: frontend
    spec:
      restartPolicy: Always
      containers:
        - name: api
          image: ghcr.io/jawr/whois-bi/ui:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
              name: ui
